# sismed-perobal-builder-63

./: index.html  package-lock.json  package-scripts.json  package.json  tailwind.config.ts
scripts/: build-desktop.js
src/: App.tsx  AppRoutes.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Layout.tsx  ModernSidebar.tsx
src/pages/: ConfiguracoesDesktop.tsx  Index.tsx  Pacientes.tsx
